--- a/popup.html
+++ b/popup.html
@@ -30,8 +30,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    It hides followers and notes!
   </body>
 </html>
 
