removing unneeded script

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Hide Follows Popup</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -26,8 +26,9 @@
       - Policy documentation[1] for details and explanation.
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
-     -->
+
     <script src="popup.js"></script>
+     -->
   </head>
   <body>
     It hides followers and notes!
